--- a/DiChoHo/templates/wishlist.html
+++ b/DiChoHo/templates/wishlist.html
@@ -68,30 +68,8 @@
 	</div>
 </section>
 
-<script>
-$(document).ready(function(){
-    $("#jqueryCatchClick").on("click", function (e) {
-      e.preventDefault();
-      var clickElementId = e.target.id;
-      if (clickElementId.includes("delete-")) {
-        var prodid = clickElementId.replace("delete-button","");
-        prodid = prodid.replace("delete-span","");
-        $.ajax({
-        type: "POST",
-        url: '{% url "wishlist_delete" %}',
-        data: {
-          productid: prodid,
-          csrfmiddlewaretoken: "{{csrf_token}}",
-          action: "post",
-        },
-        success: function (json) {
-        $("#delete-button"+prodid).parent().parent().remove();
-    	},
-    	error: function (xhr, errmsg, err) {},
-      });
-      }
-    });
-});
-</script>
+<input type="hidden" value="{{csrf_token}}" id="csrf_token_id" />
+
+<script src="{% static 'js/wishlist.js' %}"></script>
 
 {% endblock %}
