--- a/DiChoHo/templates/shop.html
+++ b/DiChoHo/templates/shop.html
@@ -147,61 +147,11 @@
   <div class="mouse">
     <a href="#" class="mouse-icon">
       <div class="mouse-wheel"><span class="ion-ios-arrow-up"></span></div>
+      <input type="hidden" value="{{csrf_token}}" id="csrf_token_id" />
     </a>
   </div>
 </div>
 
-<script>
-  $(document).ready(function () {
-    $(".jqueryCatch").on('click', function (e) {
-      if (e.target !== e.currentTarget) return;
-      e.preventDefault();
-      var clickElementId = e.target.id;
-      if (clickElementId.includes("productAdd")) {
-        var prodid = clickElementId.replace("productAdd1", "");
-        prodid = prodid.replace("productAdd2", "");
-        var count = document.getElementById("cart_qty").innerHTML;
-        $.ajax({
-          type: 'POST',
-          url: '{% url "cart_add" %}',
-          data: {
-            productid: prodid,
-            productqty: 1,
-            csrfmiddlewaretoken: "{{csrf_token}}",
-            action: 'post'
-          },
-          success: function (json) {
-            count++;
-            document.getElementById("cart_qty").innerHTML = count;
-            $("#success-alert").show();
-						$("#success-alert").fadeTo(2000, 500).slideUp(500, function(){
-						$("#success-alert").slideUp(500);
-					});
-          },
-          error: function (xhr, errmsg, err) {}
-        });
-      } else {
-        var prodid = clickElementId.replace("wishlist1", "");
-        prodid = prodid.replace("wishlist2", "");
-        $.ajax({
-          type: 'POST',
-          url: '{% url "wishlist_add" %}',
-          data: {
-            productid: prodid,
-            csrfmiddlewaretoken: "{{csrf_token}}",
-            action: 'post'
-          },
-          success: function (json) {
-            $("#success-alert").show();
-						$("#success-alert").fadeTo(2000, 500).slideUp(500, function(){
-						$("#success-alert").slideUp(500);
-					});
-          },
-          error: function (xhr, errmsg, err) {}
-        });
-      }
-    })
-  });
-</script>
+<script src="{% static 'js/shop.js' %}"></script>
 
 {% endblock %}
