Update Bruteforce prevention function

--- a/DiChoHo/templates/profile.html
+++ b/DiChoHo/templates/profile.html
@@ -341,7 +341,7 @@
   Đã gửi đánh giá
 </div>
 
-<input type="hidden" value="{{csrf_token}}" id="csrf_token_id" />
+<input type="hidden" value="{{csrf_token}}" id="ctk" />
 
 <script src="{% static 'js/profile.js' %}"></script>
 
