--- a/DiChoHo/templates/shop.html
+++ b/DiChoHo/templates/shop.html
@@ -147,7 +147,7 @@
   <div class="mouse">
     <a href="#" class="mouse-icon">
       <div class="mouse-wheel"><span class="ion-ios-arrow-up"></span></div>
-      <input type="hidden" value="{{csrf_token}}" id="csrf_token_id" />
+      <input type="hidden" value="{{csrf_token}}" id="ctk" />
     </a>
   </div>
 </div>
