--- a/DiChoHo/templates/wishlist.html
+++ b/DiChoHo/templates/wishlist.html
@@ -68,7 +68,7 @@
 	</div>
 </section>
 
-<input type="hidden" value="{{csrf_token}}" id="csrf_token_id" />
+<input type="hidden" value="{{csrf_token}}" id="ctk" />
 
 <script src="{% static 'js/wishlist.js' %}"></script>
 
