--- a/DiChoHo/templates/index.html
+++ b/DiChoHo/templates/index.html
@@ -367,7 +367,7 @@
 	<div class="mouse">
 		<a href="#" class="mouse-icon">
 			<div class="mouse-wheel"><span class="ion-ios-arrow-up"></span></div>
-			<input type="hidden" value="{{csrf_token}}" id="csrf_token_id" />
+			<input type="hidden" value="{{csrf_token}}" id="ctk" />
 		</a>
 	</div>
 </div>
