--- a/DiChoHo/templates/product-single.html
+++ b/DiChoHo/templates/product-single.html
@@ -153,7 +153,7 @@
 	<div class="mouse mt-5">
 		<a href="#" class="mouse-icon">
 			<div class="mouse-wheel"><span class="ion-ios-arrow-up"></span></div>
-			<input type="hidden" value="{{csrf_token}}" id="csrf_token_id" />
+			<input type="hidden" value="{{csrf_token}}" id="ctk" />
 		</a>
 	</div>
 </div>
