--- a/DiChoHo/templates/base.html
+++ b/DiChoHo/templates/base.html
@@ -35,7 +35,7 @@
 	<link rel="stylesheet" href="{% static 'css/404style.css' %}">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 
 	{% block page_css %}{% endblock %}
 </head> 
