fix bug order, fix rating

--- a/DiChoHo/templates/checkout/payment_paypal.html
+++ b/DiChoHo/templates/checkout/payment_paypal.html
@@ -107,7 +107,7 @@
                     method: 'POST',
                     headers: {
                         'content-type': 'application/json',
-                        'X-CSRFToken': csrftoken,
+                        'X-CSRFToken': '{{ csrf_token }}',
                     },
                     body: JSON.stringify({
                         orderID: data.orderID
