--- a/DiChoHo/templates/profile.html
+++ b/DiChoHo/templates/profile.html
@@ -266,7 +266,11 @@
             <div class="row g-3">
               <div class="col-12 bg-light p-3 d-flex justify-content-between">
                 <div class=" pe-3">
-                  Tổng tiền đã trả: <span class="fw-bold">{{ order.total_paid }} VNĐ</span>
+                  {% if order.billing_status %}
+                    Tổng tiền: <span class="fw-bold">{{ order.total_paid }} VNĐ</span> (Đã thanh toán)
+                  {% else %}
+                    Tổng tiền: <span class="fw-bold">{{ order.total_paid }} VNĐ</span> (Chưa thanh toán)
+                  {% endif %}
                 </div>
                 <div class="d-flex d-flex-inline">
                   <div class="text-end pe-3">Ngày mua hàng: {{ order.created }}</div>
@@ -282,8 +286,10 @@
                         <a class="text-decoration-none" id="{{ item.product.id }}" href="{{ item.product.get_absolute_url }}">
                           <p class="card-text medium">{{item.product.title}}</p>
                         </a>
-                        <button class="btn btn-primary jQueryEvaluate" style="width:20%" id="evaluate{{item.product.id}}" type="button" data-toggle="modal" data-target="#guidanhgia">
-                        Để lại đánh giá</button>
+                        {% if order.billing_status %}
+                          <button class="btn btn-primary jQueryEvaluate" style="width:20%" id="evaluate{{item.product.id}}-{{order.id}}" type="button" data-toggle="modal" data-target="#guidanhgia">
+                            Để lại đánh giá</button>
+                        {% endif %}
                       </div>
                     </div>
                   </div>
@@ -339,6 +345,10 @@
 
 <div class="alert alert-success" role="alert" style="position: fixed; bottom: 0px; left: 25px; display: none;" id="success-alert">
   Đã gửi đánh giá
+</div>
+
+<div class="alert alert-success" role="alert" style="position: fixed; bottom: 0px; left: 25px; display: none;" id="error">
+  Lỗi/Chưa thanh toán
 </div>
 
 <input type="hidden" value="{{csrf_token}}" id="ctk" />
