--- a/DiChoHo/templates/register.html
+++ b/DiChoHo/templates/register.html
@@ -38,7 +38,7 @@
     <form action="" class="log-in" autocomplete="off" method="POST">
       {% csrf_token %}
       <div class="logo-class" style="background-color: #02be6e; border-radius: 10px">
-        <img src="{% static './images/Logo.png' %}" alt="logo" style="width: 25px; height: 25px; margin-top: 7px;" />
+        <img src="{% static './images/logo.png' %}" alt="logo" style="width: 25px; height: 25px; margin-top: 7px;" />
         <h2 style="font-weight: bold">DICHOHO</h2>
       </div>
       {% for message in messages %}
