--- a/DiChoHo/templates/login.html
+++ b/DiChoHo/templates/login.html
@@ -68,7 +68,7 @@
         style="background-color: #02be6e; border-radius: 10px"
       >
         <img
-          src="{% static './images/Logo.png' %}"
+          src="{% static './images/logo.png' %}"
           alt="logo"
           style="width: 25px; height: 25px; margin-top: 7px;"
         />
